そこそこ動く状態でコミット

--- a/EvidenceCapture/View/OperateControl.xaml
+++ b/EvidenceCapture/View/OperateControl.xaml
@@ -5,7 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EvidenceCapture.View"
              xmlns:vm="clr-namespace:EvidenceCapture.ViewModel"
-            xmlns:rs="clr-namespace:EvidenceCapture.Properties"
+             xmlns:model="clr-namespace:EvidenceCapture.Model"
+             xmlns:rs="clr-namespace:EvidenceCapture.Properties"
+             xmlns:custom="clr-namespace:EvidenceCapture.View.Custom"
              mc:Ignorable="d" 
              d:DesignHeight="480" d:DesignWidth="640">
     <UserControl.DataContext>
@@ -23,40 +25,59 @@
         </Grid.RowDefinitions>
 
         <!-- ツリーペイン-->
+        <StackPanel Orientation="Horizontal" Margin="2">
+            <Button 
+                Width="30"
+                    Margin="4,0,2,0"
+                    ToolTip="{x:Static rs:Resources.AddGroupToolTip}"
+                    Command="{Binding AddGroupCommand}"
+                    DockPanel.Dock="Left"
+                    TextBlock.FontFamily="Wingdings 2"
+                    TextBlock.FontSize="20"
+                    Content="Ì"/>
+        </StackPanel>
         <Border 
-                Grid.RowSpan="2"
+                Grid.Row="1"
                 Margin="4,2,4,2"
                 Background="WhiteSmoke"
                 Padding="2"
                 CornerRadius="8">
-            <TreeView 
+
+            <custom:BindableSelectedItemTreeView 
                 BorderThickness="0"
                 Background="Transparent"
-                Width="100"
+                Width="180"
+                BindableSelectedItem="{Binding SelectedNode, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                 ItemsSource="{Binding SnapList}">
-            </TreeView>
+                <TreeView.InputBindings>
+                    <KeyBinding Key="Delete" Command="{Binding RemoveNodeCommand}"/>
+                </TreeView.InputBindings>
+                <TreeView.Resources>
+                    <Style TargetType="TreeViewItem">
+                        <Setter Property="IsExpanded" Value="{Binding Path=IsExpanded,Mode=TwoWay}"/>
+                    </Style>
+                </TreeView.Resources>
+                <TreeView.ItemTemplate>
+                    <HierarchicalDataTemplate DataType="model:SnapTreeItem" ItemsSource="{Binding Children}">
+                        <TextBlock Text="{Binding Name}"/>
+                    </HierarchicalDataTemplate>
+                </TreeView.ItemTemplate>
+            </custom:BindableSelectedItemTreeView>
         </Border>
         <DockPanel
+            Margin="2"
             Grid.Column="1">
-            <Border 
-                Margin="4,2,8,2"
-                Background="black"
-                Padding="2"
-                CornerRadius="8" BorderBrush="Silver" BorderThickness="1">
                 <Button 
+                    Width="30"
+                    Margin="4,0,2,0"
                     ToolTip="{x:Static rs:Resources.SetFolderToolTip}"
-                    TextBlock.Foreground="Silver"
                     Command="{Binding SetOutputPathCommand}"
-                    BorderThickness="0"
-                    TextBlock.FontWeight="Bold"
-                    TextBlock.FontSize="18"
-                    Background="Transparent"
                     DockPanel.Dock="Left"
                     TextBlock.FontFamily="Wingdings"
+                    TextBlock.FontSize="20"
                     Content="1"/>
-            </Border>
             <Border 
-                Margin="2,2,4,2"
+                Margin="4,0,0,0"
                 CornerRadius="5"
                 Background="WhiteSmoke"
                 DockPanel.Dock="Right">
@@ -71,5 +92,9 @@
             </Border>
         </DockPanel>
 
+        <Image
+            Grid.Row="1"
+            Grid.Column="1"
+            Source="{Binding Preview}"/>
     </Grid>
 </UserControl>
