--- a/EvidenceCapture/View/OperateControl.xaml
+++ b/EvidenceCapture/View/OperateControl.xaml
@@ -28,13 +28,22 @@
         <StackPanel Orientation="Horizontal" Margin="2">
             <Button 
                 Width="30"
-                    Margin="4,0,2,0"
+                    Margin="4,0,4,0"
                     ToolTip="{x:Static rs:Resources.AddGroupToolTip}"
                     Command="{Binding AddGroupCommand}"
-                    DockPanel.Dock="Left"
                     TextBlock.FontFamily="Wingdings 2"
                     TextBlock.FontSize="20"
                     Content="Ì"/>
+
+            <CheckBox 
+                IsChecked="{Binding CheckedAutoResize}"
+                Margin="0,0,4,0"                
+                ToolTip="{x:Static rs:Resources.AutoResizeToolTip}"
+                TextBlock.FontFamily="Wingdings 2"
+                TextBlock.FontSize="20"
+                Content="©"
+                Width="30"
+                Style="{StaticResource ToggleButton}"/>
         </StackPanel>
         <Border 
                 Grid.Row="1"
@@ -64,24 +73,29 @@
                 </TreeView.ItemTemplate>
             </custom:BindableSelectedItemTreeView>
         </Border>
-        <DockPanel
-            Margin="2"
-            Grid.Column="1">
-                <Button 
-                    Width="30"
-                    Margin="4,0,2,0"
-                    ToolTip="{x:Static rs:Resources.SetFolderToolTip}"
-                    Command="{Binding SetOutputPathCommand}"
-                    DockPanel.Dock="Left"
-                    TextBlock.FontFamily="Wingdings"
-                    TextBlock.FontSize="20"
-                    Content="1"/>
+
+        <Grid Margin="2" Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Button 
+                Grid.Column="0"
+                Width="30"
+                Margin="4,0,2,0"
+                ToolTip="{x:Static rs:Resources.SetFolderToolTip}"
+                Command="{Binding SetOutputPathCommand}"
+                TextBlock.FontFamily="Wingdings"
+                TextBlock.FontSize="20"
+                Content="1"/>
             <Border 
+                Grid.Column="1"
                 Margin="4,0,0,0"
                 CornerRadius="5"
-                Background="WhiteSmoke"
-                DockPanel.Dock="Right">
+                Background="WhiteSmoke">
                 <TextBox
+                    VerticalAlignment="Center"
                     BorderThickness="0"
                     Focusable="False"
                     IsReadOnly="True"
@@ -90,11 +104,22 @@
                     Background="Transparent"
                     TextBlock.Foreground="Black"/>
             </Border>
-        </DockPanel>
+            <Button 
+                Grid.Column="2"
+                Width="30"
+                Margin="4,0,2,0"
+                ToolTip="{x:Static rs:Resources.LaunchReportDialogToolTip}"
+                Command="{Binding LaunchReportDialogCommand}"
+                TextBlock.FontFamily="Wingdings"
+                TextBlock.FontSize="20"
+                Content="&lt;"/>
 
-        <Image
+        </Grid>
+
+
+        <local:ImageProcessingControl
             Grid.Row="1"
             Grid.Column="1"
-            Source="{Binding Preview}"/>
+            DataContext="{Binding ImageProcessingVM}"/>
     </Grid>
 </UserControl>
