--- a/EvidenceCapture/View/Style/CommonStyle.xaml
+++ b/EvidenceCapture/View/Style/CommonStyle.xaml
@@ -67,7 +67,87 @@
 
                             </Setter>
                         </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
+
+
+    <Style TargetType="{x:Type CheckBox}" x:Key="ToggleButton">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type CheckBox}">
+                    <Grid >
+                        <Border Name="Border" 
+                                BorderBrush="#939393"
+                                BorderThickness="1"
+                                CornerRadius="4">
+                            <Border.Effect>
+                                <DropShadowEffect Opacity="0.75" BlurRadius="4" ShadowDepth="0"/>
+                            </Border.Effect>
+
+                            <Border.Background>
+                                <LinearGradientBrush  StartPoint="0.5,0" EndPoint="0.5,1">
+                                    <GradientStop Color="#454545" Offset="0.25" />
+                                    <GradientStop Color="#1F1F1F" Offset="1" />
+                                </LinearGradientBrush>
+                            </Border.Background>
+                            <ContentPresenter 
+                                Name="content"
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Center"
+                                TextBlock.Foreground="#DEDEDE">
+                            </ContentPresenter>
+                        </Border>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <!-- マウスオーバー -->
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <Setter TargetName="Border" Property="Background">
+                                <Setter.Value>
+                                    <LinearGradientBrush  StartPoint="0.5,0" EndPoint="0.5,1">
+                                        <GradientStop Color="#5C5C5C" Offset="0.25" />
+                                        <GradientStop Color="#363636" Offset="1" />
+                                    </LinearGradientBrush>
+                                </Setter.Value>
+                            </Setter>
+                        </Trigger>
+
+                        <!-- 押下時 -->
+                        <Trigger Property="IsChecked" Value="true">
+                            <Setter TargetName="Border" Property="Background" Value="#1E1E1E"/>
+                            <Setter TargetName="Border" Property="BorderBrush" Value="#5F5F5F"/>
+                        </Trigger>
+
+                        <!-- 押下時 -->
+                        <Trigger Property="IsPressed" Value="true">
+                            <Setter TargetName="Border" Property="Background" Value="#1E1E1E"/>
+                            <Setter TargetName="Border" Property="BorderBrush" Value="#5F5F5F"/>
+                        </Trigger>
+                        <!-- 非活性時 -->
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter TargetName="Border" Property="BorderThickness" Value="0">
+                            </Setter>
+                            <Setter TargetName="Border" Property="Background" >
+                                <Setter.Value>
+                                    <LinearGradientBrush  StartPoint="0.5,0" EndPoint="0.5,1">
+                                        <GradientStop Color="#3B3B3B" Offset="0.25" />
+                                        <GradientStop Color="#1F1F1F" Offset="1" />
+                                    </LinearGradientBrush>
+                                </Setter.Value>
+                            </Setter>
+
+                            <Setter TargetName="content" Property="TextBlock.Foreground" Value="#939393"/>
+                            <Setter TargetName="Border" Property="Effect">
+                                <Setter.Value>
+
+                                    <DropShadowEffect Opacity="0.75" BlurRadius="10" ShadowDepth="0"/>
+                                </Setter.Value>
+
+                            </Setter>
+                        </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
