グループ名のリネームに対応

--- a/EvidenceCapture/View/OperateControl.xaml
+++ b/EvidenceCapture/View/OperateControl.xaml
@@ -60,7 +60,9 @@
                 ItemsSource="{Binding SnapList}">
                 <TreeView.InputBindings>
                     <KeyBinding Key="Delete" Command="{Binding RemoveNodeCommand}"/>
+                    <KeyBinding Key="F2" Command="{Binding LaunchRenameDialogCommand}"/>
                 </TreeView.InputBindings>
+                
                 <TreeView.Resources>
                     <Style TargetType="TreeViewItem">
                         <Setter Property="IsExpanded" Value="{Binding Path=IsExpanded,Mode=TwoWay}"/>
