--- a/EvidenceCapture/View/Overray/MessageDialog.xaml
+++ b/EvidenceCapture/View/Overray/MessageDialog.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="EvidenceCapture.View.Overray.ReportFinish"
+﻿<UserControl x:Class="EvidenceCapture.View.Overray.MessageDialog"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,7 +7,8 @@
              xmlns:vm="clr-namespace:EvidenceCapture.ViewModel.Overray"
              xmlns:rs="clr-namespace:EvidenceCapture.Properties"
              xmlns:conv="clr-namespace:EvidenceCapture.View.Converter"
-             mc:Ignorable="d"
+             xmlns:custom="clr-namespace:EvidenceCapture.View.Custom"
+             mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -18,10 +19,10 @@
         </ResourceDictionary>
     </UserControl.Resources>
     <UserControl.DataContext>
-        <vm:ReportFinishViewModel/>
+        <vm:MessageDialogViewModel/>
     </UserControl.DataContext>
     <Border Style="{StaticResource FormBaseBorder}" 
-            Width="380" 
+            Width="320" 
             Height="200">
         <Grid 
         Style="{StaticResource FormBase}">
@@ -30,36 +31,17 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Label Content="{x:Static rs:Resources.ReportFinishTitle}" Style="{StaticResource TitleLabel}"></Label>
-            <StackPanel 
-                Margin="8"
+            <Label Content="{Binding Title}" Style="{StaticResource TitleLabel}"></Label>
+
+            <TextBlock 
                 Grid.Row="1"
-                Orientation="Vertical">
-                <TextBlock
-                    TextWrapping="Wrap"
-                    Text="{Binding DialogCaption}" ></TextBlock>
-
-                <Grid Margin="0,12,0,0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="0.48*" />
-                        <ColumnDefinition Width="0.04*" />
-                        <ColumnDefinition Width="0.48*" />
-                    </Grid.ColumnDefinitions>
-                    <Button 
-                        Command="{Binding ShowFileCommand}"
-                        Content="{x:Static rs:Resources.LaunchFileButton}"/>
-                    <Button 
-                        Command="{Binding ShowDirCommand}"
-                        Content="{x:Static rs:Resources.LaunchDirButton}" Grid.Column="2"/>
-
-                </Grid>
-            </StackPanel>
+                Margin="8" Text="{Binding Message}" TextWrapping="Wrap"/>
 
 
             <Button 
-                    Grid.Row="2" Margin="8"
-                    Command="{Binding CancelCommand}"
-                    Content="{x:Static rs:Resources.CloseButton}" Grid.Column="2"/>
+                Margin="8"
+                Command="{Binding CancelCommand}"
+                    Content="{x:Static rs:Resources.CloseButton}" Grid.Row="2"/>
 
         </Grid>
     </Border>
