--- a/EvidenceCapture/View/ImageProcessingControl.xaml
+++ b/EvidenceCapture/View/ImageProcessingControl.xaml
@@ -6,7 +6,8 @@
              xmlns:local="clr-namespace:EvidenceCapture.View"
              xmlns:rs="clr-namespace:EvidenceCapture.Properties"
              xmlns:PresentationOptions="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options" 
-
+             xmlns:atp="clr-namespace:EvidenceCapture.View.AttachedProperty"
+             xmlns:conv="clr-namespace:EvidenceCapture.View.Converter"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Border 
@@ -19,12 +20,22 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <StackPanel 
+            <Grid 
                 IsEnabled="{Binding ControlEnable, Mode=OneWay}"
                 Margin="8"
                 Grid.Row="0"
-                Orientation="Vertical">
-                <StackPanel Orientation="Horizontal">
+                HorizontalAlignment="Left">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <StackPanel Orientation="Horizontal" Grid.Column="0">
                     <Label 
                         HorizontalAlignment="Right"
                         VerticalAlignment="Center"
@@ -45,15 +56,19 @@
                         FontSize="17"
                         Text="{Binding NewWidth}"
                         Width="60" Margin="12,0,12,0"/>
-                    <Button 
-                        Width="100"
-                        Height="30"
-                        TextBlock.FontSize="17"
-                        Content="{x:Static rs:Resources.FixWidth}"
-                        Command="{Binding ResizeWidthCommand}"
-                        />
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="0,8,0,0">
+                <Button 
+                    Grid.Column="1"
+                    Width="150"
+                    Height="30"
+                    TextBlock.FontSize="17"
+                    Content="{x:Static rs:Resources.FixWidth}"
+                    Command="{Binding ResizeWidthCommand}"
+                    />
+
+
+
+                <StackPanel Orientation="Horizontal" Grid.Row="1">
                     <Label 
                         HorizontalAlignment="Right"
                         VerticalAlignment="Center"
@@ -73,15 +88,33 @@
                         FontSize="17"
                         Text="{Binding NewHeight}"
                         Width="60" Margin="12,0,12,0"/>
-                    <Button 
-                        Width="100"
+                </StackPanel>
+
+                <Button 
+                    Grid.Row="1" Grid.Column="1"
                         Height="30"
                         TextBlock.FontSize="17"
                         Content="{x:Static rs:Resources.FixHeight}"
                         Command="{Binding ResizeHeightCommand}"/>
+                
+                <StackPanel Margin="0,8,0,0" Orientation="Horizontal" Grid.Row="2">
+                    <StackPanel Orientation="Horizontal" Width="350">
+                        <Label Content="{x:Static rs:Resources.Location}" TextBlock.FontSize="17"  TextBlock.Foreground="Silver" />
+                        <Label Content="{Binding PointStr}" TextBlock.FontSize="17"  TextBlock.Foreground="Silver"/>
+                        <Label Content="{x:Static rs:Resources.Size}" TextBlock.FontSize="17"  TextBlock.Foreground="Silver" Margin="20,0,0,0"/>
+                        <Label Content="{Binding SizeStr}" TextBlock.FontSize="17"  TextBlock.Foreground="Silver"/>
+                    </StackPanel>
                 </StackPanel>
+                <Button 
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    Height="30"
+                    TextBlock.FontSize="17"
+                    Content="{x:Static rs:Resources.TrimButton}"
+                    Command="{Binding ImageTrimCommand}"/>
 
-            </StackPanel>
+                
+            </Grid>
             <Border
                
                 BorderBrush="Silver"
@@ -103,11 +136,19 @@
                         </DrawingBrush.Drawing>
                     </DrawingBrush>
                 </Border.Background>
-                <Image
-                    Stretch="Uniform"
+                <Canvas
+                    Width="{Binding RelativeSource={RelativeSource FindAncestor,AncestorType={x:Type Border}},Path=ActualWidth}"
+                    Height="{Binding RelativeSource={RelativeSource FindAncestor,AncestorType={x:Type Border}},Path=ActualHeight}"
+                    atp:DragCanvas.DragedPoint="{Binding DragedPoint,Mode=OneWayToSource}"
+                    atp:DragCanvas.DragedSize="{Binding DragedSize,Mode=OneWayToSource}"
+                    atp:DragCanvas.IsDragble="{Binding IsDragble}"
+                    atp:DragCanvas.Preview="{Binding Preview}"
+                    
                     VerticalAlignment="Top"
                     HorizontalAlignment="Left"
-                    Source="{Binding Preview}"/>
+                    >
+
+                </Canvas>
             </Border>
         </Grid>
     </Border>
