--- a/EvidenceCapture/View/Style/CommonStyle.xaml
+++ b/EvidenceCapture/View/Style/CommonStyle.xaml
@@ -1,7 +1,20 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:EvidenceCapture.View.Style"
-                     xmlns:custom="clr-namespace:EvidenceCapture.View.Custom">
+                     xmlns:custom="clr-namespace:EvidenceCapture.View.CustomControl">
+
+    <Style TargetType="Rectangle" x:Key="SelectingArea">
+        <Setter Property="Fill" Value="Transparent"></Setter>
+        <Setter Property="Stroke" Value="WhiteSmoke"></Setter>
+        <Setter Property="StrokeThickness" Value="1.5"></Setter>
+    </Style>
+
+    <Style TargetType="Rectangle" x:Key="SelectingAreaBack">
+        <Setter Property="Fill" Value="Transparent"></Setter>
+        <Setter Property="StrokeDashArray" Value="4"></Setter>
+        <Setter Property="Stroke" Value="Black"></Setter>
+        <Setter Property="StrokeThickness" Value="1.5"></Setter>
+    </Style>
 
     <Style TargetType="{x:Type ToolTip}">
         <Setter Property="Template">
