アプリケーション設定の設定変更に対応

--- a/EvidenceCapture/View/MainWindow.xaml
+++ b/EvidenceCapture/View/MainWindow.xaml
@@ -5,10 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:rs="clr-namespace:EvidenceCapture.Properties"
         xmlns:local="clr-namespace:EvidenceCapture.View"
+        xmlns:main="clr-namespace:EvidenceCapture.View.MainContents"
         xmlns:vm="clr-namespace:EvidenceCapture.ViewModel"
         mc:Ignorable="d"
         Title="{x:Static rs:Resources.AppTitle}" 
-        MinWidth="640"
+        MinWidth="730"
         MinHeight="480" 
         WindowStyle="None"
         ShowInTaskbar="True">
@@ -41,27 +42,48 @@
                     <ColumnDefinition Width="50"/>
                     <ColumnDefinition Width="50"/>
                 </Grid.ColumnDefinitions>
-                <Label 
-                Margin="10,0,0,0"
-                Foreground="Silver"
-                Content="{x:Static rs:Resources.AppTitle}"/>
+                <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
+                    <Label 
+                        Focusable="False"
+                        VerticalAlignment="Center"
+                        Margin="0,0,10,0"
+                        TextBlock.FontSize="14"
+                        Foreground="Silver"
+                        Content="{x:Static rs:Resources.AppTitle}"/>
+                    <Button 
+                        Command="{Binding ContentsSwitchCommand}"
+                        CommandParameter="{x:Static vm:MainViewModel+ContentsType.OperateControl}"
+                        ToolTip="{x:Static rs:Resources.OperateControlTooltip}"
+                        Style="{DynamicResource CaptionButtonStyleKey}">
+                        <Label TextBlock.FontFamily="Webdings" TextBlock.Foreground="Silver" Content="&#x00B7;"></Label>
+                    </Button>
+                    <Button 
+                        Command="{Binding ContentsSwitchCommand}"
+                        CommandParameter="{x:Static vm:MainViewModel+ContentsType.AppliactionSettingControl}"
+                        ToolTip="{x:Static rs:Resources.AppliactionSettingControlTooltip}"
+                        Style="{DynamicResource CaptionButtonStyleKey}">
+                        <Label TextBlock.FontFamily="Webdings" TextBlock.Foreground="Silver" Content="&#x0040;"></Label>
+                    </Button>
+
+                </StackPanel>
                 <Button 
-                Grid.Column="1"
-                Command="{Binding ToMinimunCommand}"
-                Content="0" Style="{DynamicResource CaptionButtonStyleKey}"/>
+                    Grid.Column="1"
+                    Command="{Binding ToMinimunCommand}"
+                    Content="0" Style="{DynamicResource CaptionButtonStyleKey}"/>
                 <Button 
-                Grid.Column="2"
-                Name="normOrMax"
-                Command="{Binding ToNormalOrMaximamCommand}"
-                Content="2" Style="{DynamicResource CaptionButtonStyleKey}"/>
+                    Grid.Column="2"
+                    Name="normOrMax"
+                    Command="{Binding ToNormalOrMaximamCommand}"
+                    Content="2" Style="{DynamicResource CaptionButtonStyleKey}"/>
                 <Button 
                 Grid.Column="3"
                 Command="{Binding ExitApplicationCommand}"
                 TextBlock.FontFamily="Marlett"
                 Content="r" Style="{DynamicResource CaptionButtonStyleKey}"/>
             </Grid>
-            <local:OperateControl 
-                Grid.Row="1"/>
+            <Label
+                Focusable="False"
+                Grid.Row="1" Content="{Binding MainContents}"/>
             <Grid
                 Visibility="{Binding ShowOverRay,Converter={StaticResource BoolVisibilityConverter}}"
                 Grid.Row="1">
