--- a/EvidenceCapture/View/MainContents/ImageProcessingControl.xaml
+++ b/EvidenceCapture/View/MainContents/ImageProcessingControl.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="EvidenceCapture.View.ImageProcessingControl"
+﻿<UserControl x:Class="EvidenceCapture.View.MainContents.ImageProcessingControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:EvidenceCapture.View"
+             xmlns:local="clr-namespace:EvidenceCapture.View.MainContents"
              xmlns:rs="clr-namespace:EvidenceCapture.Properties"
              xmlns:PresentationOptions="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options" 
              xmlns:atp="clr-namespace:EvidenceCapture.View.AttachedProperty"
@@ -52,7 +52,7 @@
 
                     <TextBox 
                         VerticalAlignment="Center"
-
+                        TextAlignment="Right"
                         FontSize="17"
                         Text="{Binding NewWidth}"
                         Width="60" Margin="12,0,12,0"/>
@@ -84,6 +84,7 @@
                         Content="=>" Width="40" TextBlock.TextAlignment="Center"/>
 
                     <TextBox 
+                        TextAlignment="Right"
                         VerticalAlignment="Center"                        
                         FontSize="17"
                         Text="{Binding NewHeight}"
