--- a/EvidenceCapture/View/MainContents/OperateControl.xaml
+++ b/EvidenceCapture/View/MainContents/OperateControl.xaml
@@ -1,16 +1,16 @@
-﻿<UserControl x:Class="EvidenceCapture.View.OperateControl"
+﻿<UserControl x:Class="EvidenceCapture.View.MainContents.OperateControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:EvidenceCapture.View"
-             xmlns:vm="clr-namespace:EvidenceCapture.ViewModel"
+             xmlns:local="clr-namespace:EvidenceCapture.View.MainContents"
+             xmlns:vm="clr-namespace:EvidenceCapture.ViewModel.MainContents"
              xmlns:model="clr-namespace:EvidenceCapture.Model"
              xmlns:rs="clr-namespace:EvidenceCapture.Properties"
              xmlns:custom="clr-namespace:EvidenceCapture.View.CustomControl"
              xmlns:conv="clr-namespace:EvidenceCapture.View.Converter"             
              mc:Ignorable="d" 
-             d:DesignHeight="480" d:DesignWidth="640">
+             d:DesignHeight="480" d:DesignWidth="700">
     <UserControl.DataContext>
         <vm:OperateControlViewModel/>
     </UserControl.DataContext>
@@ -61,7 +61,7 @@
             <custom:BindableSelectedItemTreeView 
                 BorderThickness="0"
                 Background="Transparent"
-                Width="180"
+                Width="140"
                 BindableSelectedItem="{Binding SelectedNode, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                 ItemsSource="{Binding SnapList}">
                 <TreeView.InputBindings>
@@ -97,21 +97,12 @@
                 TextBlock.FontFamily="Wingdings"
                 TextBlock.FontSize="20"
                 Content="1"/>
-            <Border 
-                Grid.Column="1"
-                Margin="4,0,0,0"
-                CornerRadius="5"
-                Background="WhiteSmoke">
-                <TextBox
+            <TextBox
+                    Grid.Column="1"
                     VerticalAlignment="Center"
-                    BorderThickness="0"
                     Focusable="False"
                     IsReadOnly="True"
-                    Foreground="Silver"
-                    Text="{Binding SelectedOutputPath}"
-                    Background="Transparent"
-                    TextBlock.Foreground="Black"/>
-            </Border>
+                    Text="{Binding SelectedOutputPath}"/>
             <Button 
                 Grid.Column="2"
                 Width="30"
