--- a/EvidenceCapture/App.xaml
+++ b/EvidenceCapture/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="EvidenceCapture.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:EvidenceCapture"
-             StartupUri="View/MainWindow.xaml">
+             xmlns:local="clr-namespace:EvidenceCapture">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
