--- a/EvidenceCapture/View/Style/CommonStyle.xaml
+++ b/EvidenceCapture/View/Style/CommonStyle.xaml
@@ -17,9 +17,37 @@
         </Style.Triggers>
         
     </Style>
-        
-    
-    
+
+
+
+
+    <Style TargetType="{x:Type custom:FileDraggableTextBox}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="TextBoxBase">
+                    <Border Name="Border"
+                            CornerRadius="10"
+                            BorderBrush="DimGray"
+                            Background="WhiteSmoke"
+                            BorderThickness="1">
+                        <ScrollViewer Margin="2"
+                            x:Name="PART_ContentHost" 
+                                      TextBlock.FontSize="17"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <!-- 非活性時 -->
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter TargetName="Border" Property="Background"  Value="DarkGray"/>
+                            <Setter TargetName="PART_ContentHost" Property="TextBlock.Foreground"  Value="Silver"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+
+
     <Style TargetType="{x:Type TextBox}">
         <Setter Property="Template">
             <Setter.Value>
